update vm options